explored Material/Google Icons site and found we were using teh wrong link, or rather there's a better link to use.  AND you can select features of the icons, like filled or outline, and we were using teh outline ones before, whereas the tutorial wanted us to use the filled ones.  So it's a slightly different CDN and classes, but we tested it and they're the filled ones as desired

--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Twitter Clone</title>
+
+    <!-- importing Google Fonts for access to icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <!-- importing Font Awesome for other icons -->
+
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
     
 </body>
 </html>
