--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <!-- importing Font Awesome for other icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-
+    <!-- our style sheet -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    
+    <i class="fa-brands fa-twitter"></i>
 </body>
 </html>
