started sidebar content, added 2 icons from Google Fonts and Font Awesome, plus h2

--- a/index.html
+++ b/index.html
@@ -18,6 +18,22 @@
 </head>
 <body>
 
-    <i class="fa-brands fa-twitter"></i>
+    <!-- sidebar starts -->
+
+    <div class="sidebar">
+        <!-- twitter logo -->
+        <i class="fa-brands fa-twitter"></i>
+
+        <div class="sidebarOption  activer">
+            <span class="material-icons">
+                home
+            </span>
+            <h2>Home</h2>
+        </div>
+    </div>
+
+    <!-- sidebar ends -->
+
+
 </body>
 </html>
