--- a/index.html
+++ b/index.html
@@ -24,12 +24,20 @@
         <!-- twitter logo -->
         <i class="fa-brands fa-twitter"></i>
 
-        <div class="sidebarOption  activer">
+        <div class="sidebarOption  active">
             <span class="material-icons">
                 home
             </span>
             <h2>Home</h2>
         </div>
+
+        <div class="sidebarOption  active">
+            <span class="material-icons">
+                search
+            </span>
+            <h2>Explore</h2>
+        </div>
+
     </div>
 
     <!-- sidebar ends -->
