--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
             </span>
             <h2>Explore</h2>
         </div>
+       
+        <div class="sidebarOption  active">
+            <span class="material-icons">
+                notifications
+            </span>
+            <h2>Notifications</h2>
+        </div>
 
     </div>
 
