started Feed section with Home header

--- a/index.html
+++ b/index.html
@@ -87,6 +87,19 @@
 
     <!-- sidebar ends -->
 
+    <!-- feed starts -->
+
+    <div class="feed">
+        <div class="feed__header">
+            <h2 class="">Home</h2>
+        </div>
+
+        <!-- tweetbox starts -->
+
+    </div>
+
+    <!-- feed ends -->
+
 
 </body>
 </html>
