imported assets folder w/ pics. added img. added input, all coding w/ emmet snippets

--- a/index.html
+++ b/index.html
@@ -96,6 +96,17 @@
 
         <!-- tweetbox starts -->
 
+        <div class="tweetBox">
+            <form action="" class="">
+                <div class="tweetbox__input">
+                    <img src="./assets/profile.png" alt="" class="">
+                    <input type="text" class="" placeholder="What's happening?">
+                </div>
+            </form>
+        </div>
+
+        <!-- tweetbox ends -->
+
     </div>
 
     <!-- feed ends -->
