finished Feed content, now to style Feed

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
                     <img src="./assets/profile.png" alt="" class="">
                     <input type="text" class="" placeholder="What's happening?">
                 </div>
+                <button class="tweetBox__tweetButton">Tweet</button>
             </form>
         </div>
 
