added post__footer icons, used the heart outline b/c we haven't liked this post yet, lol

--- a/index.html
+++ b/index.html
@@ -139,9 +139,23 @@
                 </div>
 
                 <img src="./assets/car.jpg" alt="" class="">
+
+                <div class="post__footer">
+                    <span class="material-icons">
+                        repeat
+                    </span>
+
+                    <span class="material-icons">
+                        favorite_border
+                    </span>
+
+                    <span class="material-icons">
+                        publish
+                    </span>
+
+                </div>
             </div>
         </div>
-
         <!-- post ends -->
 
     </div>
