--- a/index.html
+++ b/index.html
@@ -117,16 +117,13 @@
             <div class="post__body">
                 <div class="post__header">
                     <div class="post__headerText">
-                        <h3 class="">
-                            
+                        <h3>
                             Mae
 
-                            <span class="material-icons">
-                                verified
-                            </span>
-
-
                             <span class="post__headerSpecial">
+                                <span class="material-icons post__badge">
+                                verified
+                                </span>
                                 @notOsha
                             </span>
 
