styled post__headerSpecial

--- a/index.html
+++ b/index.html
@@ -117,17 +117,12 @@
             <div class="post__body">
                 <div class="post__header">
                     <div class="post__headerText">
-                        <h3>
-                            Mae
-
-                            <span class="post__headerSpecial">
+                        <h3>Mae<span class="post__headerSpecial">
                                 <span class="material-icons post__badge">
-                                verified
-                                </span>
-                                @notOsha
-                            </span>
+                                verified</span>@notOsha</span>
 
 <!-- trying this config of the spans - they're side by side instead of embedded like my guide, not sure what the tutorial is. but will test w/ styling -->
+<!-- update to above comment - I reverted the structure to nesting the code.  The tutorial did have it that way specifically, and the styling was based on that. Altering it at this point is a little too advanced for my current bandwidth - I'd just like to get a working clone up. 7/9/24 -->
                         </h3>
                     </div>
                     <div class="post__headerDescription">
