started adding widgets content to html

--- a/index.html
+++ b/index.html
@@ -234,6 +234,14 @@
                 </div>
                 <!-- post ends -->
 
+    <!-- widgets starts -->
+
+    <div class="widgets">
+        <div class="widgets__input"></div>
+    </div>
+
+    <!-- widgets ends -->
+
     </div>
 
     <!-- feed ends -->
