added input and its placeholder

--- a/index.html
+++ b/index.html
@@ -237,7 +237,12 @@
     <!-- widgets starts -->
 
     <div class="widgets">
-        <div class="widgets__input"></div>
+        <div class="widgets__input">
+            <span class="material-icons widgets__searchIcon">
+                search
+            </span>
+            <input type="text" placeholder="Search Twitter">
+        </div>
     </div>
 
     <!-- widgets ends -->
