added widget content

--- a/index.html
+++ b/index.html
@@ -249,6 +249,10 @@
                     </span>
                     <input type="text" placeholder="Search Twitter">
                 </div>
+
+                <div class="widgets__widgetContainer">
+                     <h2>What's happening?</h2>
+                </div>
             </div>
         
             <!-- widgets ends -->
