embedded AOC's post about impeaching Thomas and Alito from the Supreme Court. Fire emoji fire emoji fire emoji

--- a/index.html
+++ b/index.html
@@ -252,6 +252,14 @@
 
                 <div class="widgets__widgetContainer">
                      <h2>What's happening?</h2>
+                    <blockquote class="twitter-tweet">
+                        <p lang="en" dir="ltr">Corruption, without consequence, infects all it touches. Congress must exercise its powers to
+                            impeach.<br><br>The corruption of Justices Thomas &amp; Alito constitutes a clear danger to our democracy. I
+                            moved to impeach them because it is the right thing to do for the American people. <a
+                                href="https://t.co/eOscx9avE1">pic.twitter.com/eOscx9avE1</a></p>&mdash; Rep. Alexandria Ocasio-Cortez
+                        (@RepAOC) <a href="https://twitter.com/RepAOC/status/1811251753435754564?ref_src=twsrc%5Etfw">July 11, 2024</a>
+                    </blockquote>
+                    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                 </div>
             </div>
         
